--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"id": "cmd-k",
-	"name": "CMD-K",
-	"version": "1.0.0",
+	"id": "editor-k",
+	"name": "EditorK",
+	"version": "1.0.1",
 	"minAppVersion": "0.15.0",
 	"description": "AI-powered text editing for Obsidian, inspired by Cursor IDE's CMD+K",
 	"author": "Jake",
